Teberao de trem

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
+MEDIA_DISK=local
+FEATURE_MEDIA_RAW=false
+IDEMPOTENCY_TTL_HOURS=6
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
