--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=FacilitAIAgencia
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=https://facilitaiagencia.3f7.org/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -18,30 +18,32 @@ BCRYPT_ROUNDS=12
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=info
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=facilitaiagencia
+DB_USERNAME=facilitaiagencia
+DB_PASSWORD=
 
-SESSION_DRIVER=database
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=facilitaiagencia.3f7.org
+SESSION_COOKIE=facilitaiagencia_session
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 MEDIA_DISK=local
 FEATURE_MEDIA_RAW=false
 IDEMPOTENCY_TTL_HOURS=6
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
+QUEUE_PREFIX=facilitaiagencia
 
-CACHE_STORE=database
-# CACHE_PREFIX=
+CACHE_STORE=redis
+CACHE_PREFIX=facilitaiagencia
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -49,6 +51,7 @@ REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_PREFIX=facilitaiagencia_
 
 MAIL_MAILER=log
 MAIL_SCHEME=null
