--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "openai-php/laravel": "^0.14.0",
+        "phpoffice/phpspreadsheet": "^1.29",
         "predis/predis": "^3.1",
         "smalot/pdfparser": "^2.12"
     },
